cabal-version:      2.4
name:               universe-simulation
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: universe simulation in haskell

-- A URL where users can report bugs.
-- bug-reports: https://github.com/luke-tangh/universe-simulation

-- The license under which the package is released.
-- license: MIT
author:             luketang
maintainer:         luke.tangh@outlook.com

extra-source-files:
    README.md
    LICENSE

executable universe-simulation
    main-is:          Main.hs

    build-depends:
        base ^>=4.17.2.0,
        gloss,
        random,
        random-shuffle

    hs-source-dirs:   app
    default-language: Haskell2010
